fix: 文章本地图片无法显示问题

--- a/source/_posts/2021-07-15-51实现数码管动态显示数字.md
+++ b/source/_posts/2021-07-15-51实现数码管动态显示数字.md
@@ -82,4 +82,4 @@ void main() {
 `toBin()`是将十进制数转为二进制，方便我们在调用的时候直接通过十进制数就能指定到对应的数码管
 
 通用大部分`STC89c5xx`的单片机
-![数码管模块及编译器模块原理图](./2021-07-15-10-34-15.png)
+![数码管模块及编译器模块原理图](2021-07-15-10-34-15.png)
