--- a/source/_posts/2022/03-31-算法思想之滑动窗口.md
+++ b/source/_posts/2022/03-31-算法思想之滑动窗口.md
@@ -76,7 +76,7 @@ public int minSubArrayLen(int target, int[] nums) {
 
 可以看到，效率还是蛮低的，毕竟套了两个循环，下面我们来优化下
 
-![](./image-20220331184056858.png)
+![](image-20220331184056858.png)
 
 再回顾下上面操作，我们是在符合条件的时候就缩小范围后再累加，不符合时扩大范围再累加，在这期间是存在重复计算问题的  
 例如：`arr = [1, 2, 3, 4, 5];left = 0,right = 4`中我们会累加得出结果是10，如果缩小范围（left+1）就要重新遍历 [2, 3, 4]
@@ -116,7 +116,7 @@ public int minSubArrayLen(int target, int[] nums) {
 
 可以看到，经过优化后的代码用时减少到了1ms，可谓是优化大大滴，当然还有优化空间，这里我就不再演示了，更多的解法大家可以看力扣上的题解
 
-![](./image-20220331193247716.png)
+![](image-20220331193247716.png)
 
 
 
