--- a/source/_posts/2022/10-12-Vue3组件继承.md
+++ b/source/_posts/2022/10-12-Vue3组件继承.md
@@ -53,7 +53,7 @@ export default defineComponent({
 import YButton from "@/components/YButton.vue"
 </script>
 ```
-![./10-12-Vue3组件继承/2022-10-13-12-09-31.png](./2022-10-13-12-09-31.png)
+![./10-12-Vue3组件继承/2022-10-13-12-09-31.png](2022-10-13-12-09-31.png)
 
 可以看到我们按钮自定义的按钮显示出来了
 
@@ -64,7 +64,7 @@ import YButton from "@/components/YButton.vue"
 
 但是此方法在只能继承某个组件，不能对组件加入一些其他dom元素，万一我还需要加个其他标签怎么办呢  
 且此方法因为获取父组件的setup，所以在ts中，语法检查会报错，望大佬解释以下
-![./10-12-Vue3组件继承/2022-10-13-12-17-54.png](./2022-10-13-12-17-54.png)
+![./10-12-Vue3组件继承/2022-10-13-12-17-54.png](2022-10-13-12-17-54.png)
 
 ## 透传 Attributes
 文档地址：[https://cn.vuejs.org/guide/components/attrs.html](https://cn.vuejs.org/guide/components/attrs.html)
@@ -160,4 +160,4 @@ export default defineComponent({
 </YButton>
 ```
 
-![./10-12-Vue3组件继承/2022-10-13-13-20-30.png](./2022-10-13-13-20-30.png)
+![./10-12-Vue3组件继承/2022-10-13-13-20-30.png](2022-10-13-13-20-30.png)
